# File-tools

./: .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  app.py  build.bat  build.sh  build_exe.bat  build_exe_optimized.bat  build_inno_setup.iss  build_nuitka.py  build_pyinstaller.py  build_pyinstaller_checkonly.py  config.yaml  config_20250904_185405..yaml  config_20250904_191652..yaml  config_20250904_192305..yaml  config_20260212_223013..yaml  config_debug.py  debug.py  debug_app_import.py  docker-compose.yaml  file-tools.spec  full_debug.py  hash_debug.py  installer.nsi  main.py  optimization_report.md  package-lock.json  package.json  pyproject.toml  requirements.txt  run_tests.bat  setup.py  temp.txt  temp_extensions.txt  (+6 more)
.claude/: settings.local.json
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: ci.yml  release-drafter.yml  release.yml
.qoder/rules/: rules.md
.qwen/: PROJECT_SUMMARY.md
.trae/documents/: 迁移到 Tantivy + HNSWLib + FastEmbed.md
backend/: run_web.py
backend/api/: __init__.py  api.py  dependencies.py  main.py  models.py  routes.py
backend/api/routes/: chat.py  config.py  directory.py  search.py  search_fix.py  system.py
backend/core/: __init__.py  chat_history_db.py  constants.py  document_parser.py  embedding_manager.py  exceptions.py  file_monitor.py  file_scanner.py  index_manager.py  model_manager.py  privacy_guard.py  query_processor.py  rag_pipeline.py  search_engine.py  service.py  sharded_cache.py  smart_indexer.py  text_chunker.py  universal_parser.py  vector_engine.py  vram_manager.py
backend/models/: base.py
backend/utils/: __init__.py  app_paths.py  config_loader.py  config_validator.py  helpers.py  logger.py  metrics.py  network.py
config/: database.yaml  settings.yaml
data/: chat_history.db
data/tantivy_index/: .managed.json  meta.json
data/whoosh_index/: _MAIN_0.toc
docs/: CONTRIBUTING.md  DEVELOPER_GUIDE.md  USAGE_GUIDE.md  智能文件检索与问答系统.md  需求文档v3(最终版).md
frontend/: index.html  new_design.html  streamlit_app.py
frontend/static/css/: style.css
frontend/static/js/: backend-loading-timeout.js  main.js  main.js.backup  tauri_detection.js
frontend/static/js/modules/: chat.js  directory.js  event-bindings.js  search.js  settings.js  tauri-api.js  ui.js  utils.js
reports/: test_report.html
scripts/: allure_report.py  build_inno_setup.iss  build_installer.py  clean_local_artifacts.py  generate-changelog.js  generate-release-notes.js  install_allure.py  package-release.js  run_tests.bat  run_tests.py  sync-version.js  sync_version.py  verify-version.js  version_manager.py
src/: __init__.py
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/api/: app.py  auth.py  models.py  routes.py
src/core/: document_parser.py  file_monitor.py  file_scanner.py  index_manager.py  inference_optimizer.py  model_manager.py  privacy_filter.py  rag_pipeline.py  search_engine.py  security_manager.py  smart_indexer.py  universal_parser.py  vector_engine.py  vram_manager.py
src/ui/: __init__.py  components.py  main_window.py
src/utils/: __init__.py  config_loader.py  logger.py
tests/: conftest.py  factories.py  test_config_loader.py  test_document_parser.py  test_file_monitor.py  test_file_processing_integration.py  test_file_scanner.py  test_index_manager.py  test_logger.py  test_model_manager.py  test_performance.py  test_privacy_guard.py  test_query_processor.py  test_rag_pipeline.py  test_rag_workflow.py  test_search_engine.py  test_vram_manager.py  test_web_api.py  utils.py
tests/api/: test_web_api.py  test_web_api_simple.py
tests/e2e/: __init__.py  conftest.py  test_accessibility.py  test_cross_platform.py  test_ui_chat.py  test_ui_search.py  test_ui_settings.py
tests/integration/: test_file_processing_integration.py  test_golden_eval.py  test_performance.py  test_rag_workflow.py
tests/unit/: test_async_file_scanner.py  test_chat_history_db.py  test_concurrency.py  test_config_loader.py  test_config_validator.py  test_document_parser.py  test_edge_cases.py  test_exceptions.py  test_file_monitor.py  test_file_scanner.py  test_index_manager.py  test_logger.py  test_metrics.py  test_model_manager.py  test_privacy_guard.py  test_query_processor.py  test_rag_pipeline.py  test_search_engine.py  test_sharded_cache.py  test_text_chunker.py  test_vram_manager.py
whoosh_path/: _MAIN_0.toc
