[build-system]
requires = ["setuptools>=61.0", "wheel", "more-itertools", "typing-extensions>=4.0", "scikit-build-core>=0.3.3"]
build-backend = "setuptools.build_meta"

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple/"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true

[project]
name = "file-tools"
version = "0.1.0"
requires-python = ">=3.9,<3.13"
description = "智能文件检索与问答系统 - 基于Python的本地文件智能管理工具"
authors = [{name = "Darian", email = "Dar1an@126.com"}]
license = "MIT"

dependencies = [
    "pywebview>=5.0.0,<6.0.0",
    "watchdog>=3.0.0,<5.0.0",
    "pyyaml>=6.0,<7.0",
    "PyPDF2>=3.0.1,<5.0.0",
    "pdfminer.six",
    "pandas>=2.0.0,<3.0.0",
    "openpyxl>=3.1.0,<4.0.0",
    "psutil>=5.9.0,<7.0.0",
    "python-docx>=1.1.0,<2.0.0",
    "python-pptx>=0.6.0",
    "markdown>=3.4.0,<4.0.0",
    "Pillow>=10.0.0,<12.0.0",
    "diskcache>=5.6.0,<6.0.0",
    "exifread>=3.0.0,<4.0.0",
    "pytesseract>=0.3.10,<0.4.0",
    "langchain>=0.3.0,<0.4.0",
    "langchain-community>=0.3.0,<0.4.0",
    "pywin32>=306,<320; sys_platform == 'win32'",
    "fastapi>=0.115.0,<0.120.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "python-multipart>=0.0.6,<1.0.0",
    "jieba>=0.42.1,<0.50.0",
    "typing-extensions>=4.0.0,<5.0.0",
    "charset-normalizer>=3.0.0,<5.0.0",
    "click>=8.0.0,<9.0.0",
    "fastembed>=0.3.0,<0.8.0",
    "modelscope>=1.33.0",
    "torch>=2.0.0",
    "transformers>=4.30.0,<4.42.0",
    "scikit-learn>=1.0.0",
    "GPUtil>=1.4.0",
    "addict>=2.4.0",
    "datasets>=2.14.0,<3.0.0",
    "tensorflow>=2.10.0",
    "simplejson>=3.0.0",
    "sortedcontainers>=2.4.0",
    "hnswlib>=0.8.0,<1.0.0",
    "tantivy>=0.25.0,<0.26.0",
    "pycryptodome>=3.23.0,<4.0.0",
    "pydantic>=2.12.0,<3.0.0",
    "pdfplumber>=0.11.8,<0.12.0",
    "six>=1.16.0",
    "pymupdf>=1.26.5,<2.0.0",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.0.0,<3.0.0"
]

[tool.setuptools.packages.find]
where = ["backend"]
exclude = ["tests", "tests.*", "test_*", "__pycache__"]

[tool.basedpyright]
typeCheckingMode = "basic"
reportMissingImports = false
reportMissingTypeStubs = false
reportMissingModuleSource = false
