[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ["py311"]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple/"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true

[project]
name = "file-tools"
version = "1.1.1"
requires-python = ">=3.9,<3.13"
description = "智能文件检索与问答系统 - 基于Python的本地文件智能管理工具"
authors = [{name = "Darian", email = "Dar1an@126.com"}]
license = "MIT"

# 核心依赖 - uv tree 验证的实际依赖
dependencies = [
    # Web 框架
    "fastapi>=0.115.0,<0.120.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "python-multipart>=0.0.6,<1.0.0",
    "aiofiles>=24.0.0,<25.0.0",
    # 桌面 GUI
    "pywebview>=6.2,<7.0.0",
    # 数据处理
    "pydantic>=2.12.0,<3.0.0",
    "pandas>=2.0.0,<3.0.0",
    # 搜索引擎
    "tantivy>=0.25.0,<0.26.0",
    "hnswlib>=0.8.0,<1.0.0",
    # 文档解析
    "pypdf>=3.0.0,<6.0.0",
    "pdfplumber>=0.11.8,<0.12.0",
    "pymupdf>=1.26.5,<2.0.0",
    "python-docx>=1.1.0,<2.0.0",
    "python-pptx>=0.6.0",
    "openpyxl>=3.1.0,<4.0.0",
    "markdown>=3.4.0,<4.0.0",
    # 图片处理
    "Pillow>=10.0.0,<12.0.0",
    # 中文分词
    "jieba>=0.42.1,<0.50.0",
    # 系统工具
    "watchdog>=3.0.0,<5.0.0",
    "psutil>=5.9.0,<7.0.0",
    "pywin32>=306,<320; sys_platform == 'win32'",
    # 加密和缓存
    "pycryptodome>=3.23.0,<4.0.0",
    "cryptography>=41.0.0,<46.0.0",
    "diskcache>=5.6.0,<6.0.0",
    "cachetools>=5.0.0,<6.0.0",
    # 配置和日志
    "pyyaml>=6.0,<7.0",
    "packaging>=20.0",
    # 其他
    "requests>=2.31.0,<3.0.0",
    "charset-normalizer>=3.0.0,<5.0.0",
    "click>=8.0.0,<9.0.0",
    "typing-extensions>=4.0.0,<5.0.0",
    "six>=1.16.0",
    "numpy>=1.26.0,<2.0.0", # hnswlib/pandas/sklearn 需要
    "scikit-learn>=1.0.0,<2.0.0", # RAG 需要
    "fastembed>=0.7.3",
]

# 开发依赖（uv 依赖组）
[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-html>=4.1.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-playwright>=0.7.1",
    "allure-pytest>=2.13.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
    "pyinstaller>=6.0.0",
    "httpx>=0.25.0,<1.0.0",
]

# 可选依赖（向后兼容，pip 用户可用 pip install -e ".[dev]"）
[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-html>=4.1.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-playwright>=0.7.1",
    "allure-pytest>=2.13.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
    "httpx>=0.25.0,<1.0.0",
]
# 快速扫描（使用 Rust 加速）
fast-scan = [
    "scandir-rs>=2.9.0,<3.0.0",
]
# 语义搜索嵌入模型（轻量级，纯CPU，约100MB）
# 与 modelscope 二选一，推荐此选项
embedding = [
    "fastembed>=0.3.0,<0.8.0",
]
# 阿里云 ModelScope 嵌入模型（备选）
# 如需使用，设置 embedding.provider = "modelscope"
modelscope = [
    "modelscope>=1.20.0",
]
# GPU 监控（可选）
gpu = [
    "gputil>=1.4.0",
]

[tool.setuptools.packages.find]
where = ["backend"]
exclude = ["tests", "tests.*", "test_*", "__pycache__"]

[tool.basedpyright]
typeCheckingMode = "basic"
reportMissingImports = false
reportMissingTypeStubs = false
reportMissingModuleSource = false

[tool.pytest.ini_options]
addopts = [
    "-p no:langsmith",
    "--html=reports/test_report.html",
    "--self-contained-html",
    "--cov=backend",
    "--cov-report=html:reports/coverage",
    "--cov-report=term-missing",
    "--tb=short"
]
markers = [
    "severity_blocker: 阻塞缺陷测试",
    "severity_critical: 关键功能测试",
    "severity_normal: 普通测试",
    "severity_minor: 轻微缺陷测试",
    "feature_search: 搜索功能",
    "feature_chat: 聊天功能",
    "feature_index: 索引功能",
    "feature_config: 配置功能",
    "performance: 性能测试",
    "unit: 单元测试",
    "integration: 集成测试",
    "e2e: 端到端测试",
    "slow: 慢速测试"
]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E402", "F541"]

# Playwright 跨平台 E2E 测试配置
[tool.playwright]
# 测试目录
test_dir = "tests/e2e"

# 失败时自动生成截图和视频 (CI 环境)
screenshot = "only-on-failure"
video = "retain-on-failure"
trace = "on-first-retry"

# 浏览器配置 (三端通用)
browsers = ["chromium"]

# 视口设置
viewport_width = 1280
viewport_height = 720

# 超时设置 (毫秒)
action_timeout = 30000
navigation_timeout = 30000

# 并行执行 (CI 环境单 worker 避免冲突)
workers = 1

# 重试 (CI 环境重试 2 次)
retries = 2
